--- a/04-html/portfolio-v1.html
+++ b/04-html/portfolio-v1.html
@@ -26,15 +26,12 @@
 
 <main>
 
-    <!-- About Section -->
+ 
     <section id="about">
         <h2>About Me</h2>
 
         <figure>
-            <img 
-                src="LakshmiNarayanaReddyProf_Pic.png" 
-                alt="Profile photo"
-                width="220">
+            <img src="LakshmiNarayanaReddyProf_Pic.png" alt="Profile photo" width="220">
             <figcaption>Lakshmi Narayana Reddy Yakkanti</figcaption>
         </figure>
 
@@ -53,7 +50,7 @@
         </p>
     </section>
 
-    <!-- Skills Section -->
+ 
     <section id="skills">
         <h2>Key Skills</h2>
 
@@ -67,7 +64,7 @@
         </ul>
     </section>
 
-    <!-- Projects Section -->
+   
     <section id="projects">
         <h2>Projects</h2>
 
@@ -108,7 +105,7 @@
         </article>
     </section>
 
-    <!-- Contact Section -->
+ 
     <section id="contact">
         <h2>Contact Me</h2>
 
